Resolve "Palindrome Partitioning" problem (adopt the solution to run on Java 21)